# vtech-data-structures

./: CMakeLists.txt  README.md
src/: bidirectionalnode.h  deque.h  deque.tpp  list.h  list.tpp  node.h  queue.h  queue.tpp  stack.h  stack.tpp  test.cpp
src/linked/: cyclicdoublelinkedlist.h  cyclicdoublelinkedlist.tpp  cyclicsinglylinkedlist.h  cyclicsinglylinkedlist.tpp  doublelinkedlist.h  doublelinkedlist.tpp  doublelinkedstack.h  doublelinkedstack.tpp  singlylinkedlist.h  singlylinkedlist.tpp
src/static/: arraydeque.h  arraydeque.tpp  arrayqueue.h  arrayqueue.tpp  arraystack.h  arraystack.tpp
